[project]
name = "armada_client"
version = "0.4.13"
description = "Armada gRPC API python client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["grpcio==1.76.0", "grpcio-tools==1.76.0", "mypy-protobuf>=3.6.0", "protobuf >= 5.28.1" ]
license = { text = "Apache Software License" }
authors = [{ name = "G-Research Open Source Software", email = "armada@armadaproject.io" }]

[project.optional-dependencies]
format = ["black>=23.7.0", "flake8>=7.0.0", "pylint>=2.17.5"]
# note(JayF): sphinx-jekyll-builder was broken by sphinx-markdown-builder 0.6 -- so pin to 0.5.5
docs = ["sphinx==9.1.0", "sphinx-jekyll-builder==0.3.0", "sphinx-toolbox==4.1.1", "sphinx-markdown-builder==0.6.9"]
test = ["pytest==9.0.2", "coverage==7.13.1", "pytest-asyncio==1.3.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = [
    '^typings\.py$',
    '_pb2_\.pyi$',
    '_pb2\.pyi$',
    '_pb2_grpc\.pyi$',

    '_pb2_\.py$',
    '_pb2\.py$',
    '_pb2_grpc\.py$',
]

[tool.coverage.run]
omit = [
    "*_pb2.py",
    "*_pb2_grpc.py",
]

# py.typed is required for mypy to find type hints in the package
# from: https://mypy.readthedocs.io/en/stable/installed_packages.html#making-pep-561-compatible-packages
[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
